tests/behavior/error/optional_get_value_ref2.bz
function main()
{
	let p: ?*i32 = null;

	__builtin_optional_get_value_ref(p);
}
